finished modle building

--- a/classification-model.ipynb
+++ b/classification-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "9b8169ee",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "69090568",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "870831d9",
    "metadata": {},
    "outputs": [
@@ -290,13 +290,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6cbaf264",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data.drop(['diagnosis_M '], axis=1, inplace=False)\n",
-    "y = data['diagnosis_M ']"
+    "X = data.drop(['diagnosis_M'], axis=1, inplace=False)\n",
+    "y = data['diagnosis_M']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "420ed900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NORMALIZATION - ml models related to gradient descents gives best results when the features have close scale\n",
+    "# scaling - eg: age(0-100), salary($0 - $100000) they have different scale\n",
+    "  # fit - learns the mean and stardard deviation for each feature from the dataset\n",
+    "  # transform applies a formula (x' = x-mew/sigma) it gives a new value for each data with (mean around 0, standard deviation around 1) the new data's now has close scale but the relationship stays the same \n",
+    "  # eg: age(18 -> -1.31), salary(30000 -> -1.16)\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5d3d319f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3ebfc123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)                          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fffb93fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report \n",
+    "\n",
+    "accuracy = accuracy_score(y_test,y_pred)\n",
+    "print(classification_report(y_test,y_pred)) #gives all metrics like precision, recall, f1-score\n",
+    "print(accuracy)"
    ]
   }
  ],
